@@ -1,5 +1,13 @@
 2002-09-25  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* dae/opd_image.c: fix #615166, ensure we recognize an
+	  existing image struct so we don't try to create db_tree_t
+	  object for the same samples files.
+	* db/db-debug.c: display page index when something goes wrong
+	* db/db-insert.c: be more strict on assertion
+
+2002-09-25  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* doc/Makefile.in: remove dependencies for doc/html.xsl
 
 2002-09-25  Philippe Elie  <phil.el@wanadoo.fr>
